# thesis

./: .gitignore  Bucketing Sketch.py  Conditional Bucketing.py  Final Plot Generation.py  Freq sketch simulation.py  Oracle Error Plots.py  Quantile Matching.py  Quantile Sketch.py  README.md  Simulation Plots.py  Variance Calcs.py  freq_sketch_sim_results_3rd_moment.npz  freq_sketch_sim_results_3rd_moment_ep.npz  freq_sketch_sim_results_4th_moment.npz  freq_sketch_sim_results_4th_moment_ep.npz  pyproject.toml  requirements.txt
data/: Process AOL Data.py  Process CAIDA Data.py  Process Fake Data.py  generate_fake_dataset.py  prepare_caida.cpp  process_fake_dataset.py
data/AOL-user-ct-collection/: info.txt
data/CAIDA/: source.txt
simulation/: Makefile  bucket_sketch.cc  bucket_sketch.h  compile_commands.json  count_sketch.cc  count_sketch.h  dataset.cc  dataset.h  estimator.h  fake_swa.cc  fake_swa.h  hashing.cc  hashing.h  main.cc  mock_oracle.h  ppswor.cc  ppswor.h  ppswor_k=1024_deg=3_nsims=1.txt  run_caida.cc  sim  simulate_fake_dataset.py  simulations.h  swa.cc  swa.h  swa_k=0-1024-0_ep=0.5_deg=3_nsims=10.txt  swa_k=0-1024-0_ep=0.5_deg=3_nsims=30.txt
simulation/common/: bucket_sketch.cc  bucket_sketch.h  count_sketch.cc  count_sketch.h  heap.h  mock_oracle.h  ppswor.cc  ppswor.h  simulations.h
simulation/include/: bucket_sketch.h  count_sketch.h  dataset.h  estimator.h  fake_swa.h  hashing.h  heap.h  mock_oracle.h  ppswor.h  results.h  swa.h
simulation/io/: dataset.cc  results.cpp
simulation/moments/: estimator.h  simulations.cc  simulations.h
(+3177 files in other folders)
